[DPR-429] Fix title alignment and page size picker

--- a/assets/scss/components/_data-table.scss
+++ b/assets/scss/components/_data-table.scss
@@ -22,6 +22,7 @@
   position: relative;
   text-align: inherit;
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .data-table-header-button-sort-none:before {
